# rust-ptx-builder

./: Cargo.toml  README.md  crates.js  help.html  index.html  rust-toolchain  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  rustdoc.yml
ptx_builder/: all.html  index.html  macro.bail.html  sidebar-items.js
ptx_builder/builder/: enum.BuildStatus.html  enum.CrateType.html  enum.MessageFormat.html  enum.Profile.html  index.html  sidebar-items.js  struct.BuildOutput.html  struct.Builder.html
ptx_builder/error/: enum.BuildErrorKind.html  index.html  sidebar-items.js  struct.Error.html  type.Result.html
ptx_builder/executable/: index.html  sidebar-items.js  struct.Cargo.html  trait.Executable.html
ptx_builder/executable/runner/: index.html  sidebar-items.js  struct.ExecutableRunner.html  struct.Output.html
ptx_builder/prelude/: index.html
ptx_builder/reporter/: index.html  sidebar-items.js  struct.CargoAdapter.html  struct.ErrorLogPrinter.html
search.desc/ptx_builder/: ptx_builder-desc-0-.js
src/: builder.rs  error.rs  lib.rs  reporter.rs  source.rs
src/executable/: mod.rs  process.rs  runner.rs
src/ptx_builder/: builder.rs.html  error.rs.html  lib.rs.html  reporter.rs.html  source.rs.html
src/ptx_builder/executable/: mod.rs.html  process.rs.html  runner.rs.html
tests/: builder.rs  executable.rs  reporter.rs
tests/fixtures/app-crate/: Cargo.toml
tests/fixtures/faulty-crate/: Cargo.toml
tests/fixtures/mixed-crate/: Cargo.toml
tests/fixtures/sample-crate/: Cargo.toml
trait.impl/core/clone/: trait.Clone.js
(+20 files in other folders)
