[package]
name = "ptx-builder"
version = "0.6.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>", "Juniper Tyree <juniper.tyree@helsinki.fi>"]
license = "MIT"
edition = "2021"
rust-version = "1.80" # nightly

readme = "README.md"
description = "NVPTX build helper"
repository = "https://github.com/denzp/rust-ptx-builder"
documentation = "https://docs.rs/ptx-builder"
categories = ["development-tools", "development-tools::build-utils"]
keywords = ["cuda", "nvptx", "gpgpu"]

exclude = [
    "tests/**/*",
]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
toml = "0.8"
semver = "1.0"
regex = "1.5"
libc = "0.2"

[dev-dependencies]
antidote = "1.0"
